app/assets/stylesheets/components/_code_blocks.scss
.hljs {
  padding: $base-spacing;
  margin-right: $base-spacing;
  font-size: modular-scale(-1);
}
/*I am just matching the color scheme of the highlightjs code blocks theme*/
/*for the inline codeblocks*/
code {
  color: #cccccc;
  background: #2d2d2d;
  font-size: modular-scale(-1);
}

